# spixel

./: CMakeLists.txt  LICENSE  README.md  README.txt  setup.py  spixel.sln
evaluation/config/: config.yml  configs.yml
examples/basic/: config.yml  run.bat  run.sh
examples/stereo/: config_stereo.yml  config_stereo_kitti_nobatch.yml  config_stereo_kitti_sgm.yml  config_stereo_kitty.yml  run.bat  run.sh  run_batch.bat  run_batch.sh  run_sgm.bat  run_sgm.sh
spixel/: functions.cpp  functions.h  makefile  segengine.cpp  segengine.h  spixel.cpp  spixel.vcxproj  spixel.vcxproj.filters  stdafx.h  structures.cpp  structures.h  tsdeque.h  utils.cpp  utils.h
src/: ReadMe.txt  functions.h  makefile  python_binding.cpp  segengine.cpp  segengine.h  spixel.cpp  stdafx.h  structures.cpp  structures.h  tsdeque.h  utils.cpp  utils.h
